# assignment-1

./: .gitignore  README.md  pyproject.toml
docs/: assignment.md  bpic2017_challenge.md  bpic2017_forum_qa.md
notebooks/: analysis.py
overleaf/: .gitignore  main.tex  references.bib
overleaf/figures/: final_model.bpmn
src/: __init__.py  concept_drift.py  config.py  data_loading.py  decision_mining.py  discovery.py  metrics.py  statistics.py  visualization.py
